--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merchant API Testing</title>
+    <title>API Testing</title>
 </head>
 <body>
-    <h1>Merchant API Testing</h1>
+    <h1>API Testing</h1>
     <ul>
-        <li><a href="/add_merchant">Add Merchant</a></li>
-        <li><a href="/get_merchant">Get Merchant</a></li>
-        <li><a href="/update_merchant">Update Merchant</a></li>
+        <li><a href="/add_merchant">添加商家</a></li>
+        <li><a href="/get_merchant">获取商家</a></li>
+        <li><a href="/update_merchant">更新商家</a></li>
     </ul>
 </body>
 </html>
