--- a/templates/add_merchant.html
+++ b/templates/add_merchant.html
@@ -6,18 +6,18 @@
     <title>Add Merchant</title>
 </head>
 <body>
-    <h1>Add Merchant</h1>
+    <h1>添加商家</h1>
     <form id="merchant-form">
-        <label for="name">Merchant Name:</label>
+        <label for="name">商家名字：</label>
         <input type="text" id="name" name="name" required><br><br>
 
-        <label for="address">Address:</label>
+        <label for="address">地址：</label>
         <input type="text" id="address" name="address" required><br><br>
 
-        <label for="phone">Phone:</label>
+        <label for="phone">电话：</label>
         <input type="text" id="phone" name="phone" required><br><br>
 
-        <label for="advertisement">Advertisement:</label>
+        <label for="advertisement">广告：</label>
         <textarea id="advertisement" name="advertisement"></textarea><br><br>
 
         <input type="submit" value="Submit">
